--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>eazyschool</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eazyschool</name>
+	<packaging>jar</packaging>
 	<description>eazy school project </description>
 	<url/>
 	<licenses>
@@ -82,6 +83,13 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
@@ -89,6 +97,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>6.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
 
 		<dependency>
@@ -102,7 +115,15 @@
 			<artifactId>dotenv-java</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-hal-explorer</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
@@ -112,7 +133,9 @@
 
 	</dependencies>
 
+
 	<build>
+		<finalName>eazyschool-aws-deployment</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
